@@ -15,6 +15,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Add error information to CrossfireMap.TriggerConnected, make magice_ear scriptable
+    server/monster.c
+    plugins/cfpython/cfpython_map.c
+Tchize 2007-12-22
+
 Change skill animation to use anim_suffix instead of the name.
  server/skill_util.c
 Nicolas Weeger 2007-12-21
